# squelchbox

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  install.bat  install.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
aur/: .SRCINFO  PKGBUILD
docs/: index.html
docs/superpowers/plans/: 2026-04-12-m6-fx-chain.md
docs/superpowers/specs/: 2026-04-12-m6-fx-chain-design.md
scripts/: squelchbox-macos.sh
src/: kbd.rs  lib.rs  logging.rs  main.rs  midi_cc.rs  params.rs  plugin.rs  ui.rs
src/dsp/: envelope.rs  filter_diode.rs  filter_placeholder.rs  mod.rs  oscillator.rs  oversampler.rs  voice.rs
src/dsp/fx/: delay.rs  distortion.rs  fx_chain.rs  limiter.rs  loudness_comp.rs  mod.rs  reverb.rs
src/sequencer/: clock.rs  mod.rs  pattern.rs  runtime.rs
src/ui/: ids.rs  keyboard.rs  mod.rs  palette.rs  widgets.rs
src/ui/panels/: band1.rs  band2.rs  faceplate.rs  fx_dist.rs  fx_time.rs  mod.rs  toast.rs
src/ui/panels/lower/: left_strip.rs  mod.rs  pitch_row.rs  right_strip.rs  step_area.rs  transpose.rs
src/util/: midi_export.rs  mod.rs  paths.rs
