[workspace]
members = ["xtask"]

[package]
name = "squelchbox"
version = "0.1.3"
edition = "2021"
license = "GPL-3.0-or-later"
description = "TB-303-style bassline synthesizer plugin"

[lib]
# `cdylib` for VST3/CLAP bundles; `rlib` so the `squelchbox-standalone` binary
# can link against the same lib without duplicating the module tree.
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "squelchbox-standalone"
path = "src/main.rs"

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug", rev = "28b149ec4d62757d0b448809148a0c3ca6e09a95", features = ["assert_process_allocs", "standalone"] }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug", rev = "28b149ec4d62757d0b448809148a0c3ca6e09a95" }

rtrb = "0.3"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
directories = "5"

[profile.release]
lto = "thin"
strip = "symbols"
